--- a/css/style.css
+++ b/css/style.css
@@ -1,51 +1,112 @@
+
 .inline-block{
     display: inline-block;
     vertical-align: top;
 
 }
+
 .logo{
     width: 23%;
     padding: 1%;
     text-align: center;
-
 }
+
 
 nav {
     width: 73%;
     padding: 1%;
-
 }
 
 ul{
     width: 50%;
     margin-left: auto;
-
+    font-family: 'Mochiy Pop One', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+    list-style-type: none;
+   
 }
+
 
 .heroImg{
-    height: 600px;
+    height: 750px;
     padding: 25px;
+    background-color: white;
+    padding: 40px;
+    font-size: 20px;
+    text-align: center; 
 
+    
 }
 
+
 .content{
-    width: 500px;
+    width: 750px;
     margin: 0 auto;
 
 }
 
-footer{
-    background-color: #373738;
-   
-}
 
-footer ul{
-    padding: center;
-    display: inline-block;
-    vertical-align: top;
+
+.flexContainer {
+    display: flex;
+    flex-direction: row;
+
 
 }
 
-footer li{
-    padding: center;
+.flexContainer div {
+    width: 33%;
+}
+
+
+.workGrid {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;  
+    
+}
+
+
+.mySkills{
+    background-color: white;
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+    font-family: 'Mochiy Pop One', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+
+.myWork{
+    background-color: white;
+    padding: 40px;
+    font-size: 20px;
+    text-align: center; 
+    font-family: 'Mochiy Pop One', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto', sans-serif;
+}
+
+footer {
+    position: bottom;
+    bottom: 0;
+    width: 100%;
+    height: 80px;   /* Height of the footer */
+    background:#9C7B8C;
+ }
+
+
+@media only screen and (max-width: 600) {
+    .flexContainer {
+        flex-direction: column;
+        width: 100%;
+    }
+    .workGrid {
+        margin: 0px 5%;
+        display: grid;
+        grid-template-rows: auto auto auto;
+        grid-template-columns: auto;
+    }
 }
